--- a/appveterinaria/pubspec.yaml
+++ b/appveterinaria/pubspec.yaml
@@ -27,7 +27,13 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  font_awesome_flutter: ^8.10.0
+  flutter_statusbarcolor: ^0.2.3
   cupertino_icons: ^1.0.0
+  http: ^0.12.2
+  flutter_secure_storage: ^3.3.5
+  jaguar_jwt: ^2.1.6
+  google_fonts: ^0.3.8
 
 dev_dependencies:
   flutter_test:
@@ -46,8 +52,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/image/db.png
+    - assets/image/logo.png
+    - assets/image/fondo.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
